# text-selection

./: .gitignore  CITATION.cff  MANIFEST.in  Pipfile  README.md  deploy.sh  pyproject.toml  setup.cfg  setup.py
src/text_selection/: __init__.py  cover_applied.py  cover_export.py  cover_methods.py  greedy_applied.py  greedy_export.py  greedy_kld_applied.py  greedy_kld_export.py  greedy_kld_export_performance.py  greedy_kld_methods.py  greedy_methods.py  kld_of_sets.py  metrics_applied.py  metrics_export.py  metrics_methods.py  random_applied.py  random_export.py  selection.py  utils.py  utils.tests.py
src/text_selection/app/: io.py
src/text_selection/common/: durations_iterator.py  filter_durations.py  helper.py  mapping_iterator.py  ngram_counts.py  ngram_extractor.py  ngram_extractor2.py
src/text_selection/core/: types.py
src/text_selection/core/preparation/: n_grams.py
src/text_selection/core/selection/: select_greedy.py
src/text_selection/greedy/: greedy_N_epoch_iterator.py  greedy_N_iterator.py  greedy_applied.py  greedy_epoch_iterator.py  greedy_export.py  greedy_iterator.py  greedy_iterator_N.py  main.py  optimized_greedy_N_iterator.py  optimized_greedy_iterator.py
src/text_selection/kld/: custom_kld_iterator.py  distribution_factories.py  durations_iterator.py  filter_durations.py  kld_iterator.py  main.py  mapping_iterator.py  ngram_extractor.py  optimized_kld_iterator.py
src/text_selection/random/: main.py  random_iterator.py
src/text_selection_api/: __init__.py  api.py
src/text_selection_app/: api.py  cli.py  datasets.py  default_args.py  export.py  filtering.py  helper.py  io.py  io_handling.py  n_grams.py  selection.py  sorting.py  statistics.py  subset.py  subsets.py  weights.py
src/text_selection_app_tests/py_io/: test_load_data_symbols.py  test_load_dataset.py  test_save_data_weights.py
src/text_selection_cli/: argparse_helper.py  cli.py  datasets.py  default_args.py  export.py  filtering.py  globals.py  helper.py  io_handling.py  logging_configuration.py  n_grams.py  selection.py  sorting.py  statistics.py  subset.py  subsets.py  validation.py  weights.py
src/text_selection_cli_tests/py_io/: test_load_data_symbols.py  test_load_data_weights.py  test_load_dataset.py  test_save_data_symbols.py  test_save_data_weights.py  test_save_dataset.py
src/text_selection_core/: common.py  datasets.py  globals.py  helper.py  statistics.py  subsets.py  types.py  validation.py
src/text_selection_core/algorithms/: fifo.py  reverse.py
src/text_selection_core/exporting/: symbols_exporting.py
src/text_selection_core/filtering/: duplicates.py  duplicates_filter.py  id_filter.py  known_words_filter.py  line_nr_filter.py  line_unit_frequency_filter.py  nr_selection.py  regex.py  regex_filter.py  string_filter.py  unit_frequency_filter.py  vocabulary_filtering.py  weights_filter.py  words_frequency_filter.py
src/text_selection_core/preparation/: n_grams.py
src/text_selection_core/selection/: all_selection.py  fifo.py  fifo_selection.py  greedy_selection.py  id_selection.py  kld_selection.py  nr_selection.py  random_selection.py  select_all.py  select_greedy.py  symbol_extractor.py
src/text_selection_core/sorting/: default.py  fifo_sorting.py  random.py  reverse_sorting.py  text_sorting.py  weights_sorting.py
src/text_selection_core/weights/: calculation.py  weights_iterator.py
src/text_selection_core_tests/filtering/duplicates_filter_py/: test_filter_duplicats.py
src/text_selection_core_tests/filtering/regex_filter_py/: test_filter_regex_pattern.py
src/text_selection_core_tests/filtering/unit_frequency_filter_py/: test_filter_lines_with_unit_frequencies.py
src/text_selection_core_tests/filtering/vocabulary_filtering_py/: test_get_match_iv_method.py  test_get_match_oov_method.py  test_matches_any_iv.py  test_matches_any_oov.py  test_matches_iv_boundary.py  test_matches_iv_count.py  test_matches_oov_count.py
src/text_selection_core_tests/selection/fifo_selection_py/: test_select_fifo.py
src/text_selection_core_tests/selection/greedy_selection_py/: test_select_greedy.py  test_select_greedy_epochs.py
src/text_selection_core_tests/selection/kld_selection_py/: test_select_kld.py
src/text_selection_core_tests/selection/symbol_extractor_py/: generate_test_data.py  test_get_array.py  test_get_array_mp.py
src/text_selection_core_tests/sorting/random_py/: test_sort_random.py
src/text_selection_core_tests/types_py/: test_Dataset.py  test_get_line_nrs.py
src/text_selection_core_tests/weights/calculation_py/: test_get_from_lines.py
src/text_selection_tests/: test_cover_export.py  test_greedy_export.py  test_greedy_kld_export.py  test_greedy_kld_export_performance.py  test_greedy_kld_methods.py  test_selection.py  test_utils.py
src/text_selection_tests/app/py_io/: test_load_data_ids.py  test_load_data_symbols.py  test_load_data_weights.py  test_load_dataset.py  test_save_data_ids.py  test_save_data_symbols.py  test_save_data_weights.py  test_save_dataset.py
src/text_selection_tests/common/filter_durations_py/: test_get_indices_in_duration_boundary.py
src/text_selection_tests/common/helper/: test_get_empty_columns.py
src/text_selection_tests/kld/: test_main.py
src/txt_selection/: types.py
src/txt_selection/selection/: id_selection.py
src/txt_selection_cli/: cli.py  deinitialization.py  globals.py  helper.py  initialization.py  line_nr_selection.py  old.py  subset_removal.py
tests/: cover_export.tests.py.bak  greedy_kld_methods.tests.py.bak  random_applied.tests.py.bak  random_export.tests.py.bak  test_greedy_export.py  test_greedy_kld_export.py  test_greedy_kld_methods.py  test_metrics_export.py  test_random_applied.py  test_random_export.py  test_selection.py  test_utils.py
text_selection/: __init__.py  cover_applied.py  cover_export.py  greedy_applied.py  greedy_export.py  greedy_export.tests.py  greedy_kld_export.py  greedy_kld_export.tests.py  greedy_kld_methods.tests.py  metrics_export.tests.py  random_applied.debug.py  random_applied.py  random_export.py  utils.py  utils.tests.py
(+62 files in other folders)
