[metadata]
name = text_selection
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for text selection."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/text-selection.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ordered-set
    tqdm
    sklearn
    numpy

[options.packages.find]
where = src
